# sagemaker-examples

./: .gitignore  README.md
CreditScore/: GermanCreditScoring-Autopilot.ipynb
CustomerChurn/: CustomerChurn_DW.ipynb  dw_example.template  preprocessing_predw.py
FaceDetector/: facedetector_mxnet_local.ipynb  facedetector_mxnet_sagemaker.ipynb  pyproject.toml
FaceDetector/model/code/: inference.py  mtcnn_detector.py
