[tool.poetry]
name = "arcface-mxnet"
version = "0.1.0"
description = ""
authors = ["Alessandro Cere <alecere@amazon.com>"]

[tool.poetry.dependencies]
python = ">3.7, <4"
mxnet = ">=1.8.0,<1.9"
opencv-python = "^4.5.2"
scikit-image = "^0.18.1"
onnx = "^1.9.0"
scikit-learn = "^0.24.2"
sagemaker = "^2.45.0"

[tool.poetry.dev-dependencies]
ipython = "^7.24.1"
black = "^21.5b2"
isort = "^5.8.0"
ipykernel = "^5.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
